--- a/be2r-habitat-data-generator/configs/sim_settings/sim_settings_replica_cad.json
+++ b/be2r-habitat-data-generator/configs/sim_settings/sim_settings_replica_cad.json
@@ -1,9 +1,9 @@
 {
     "dataset_name": "replica_cad",
     "scene_name": "v3_sc0_staging_00",
-    "label": "default_lights",
+    "label": "test",
 
-    "light_settings_filename": "light_settings_replica_cad.json",
+    "light_settings_filename": "light_settings_replica_cad_0.json",
 
     "width": 1200,
     "height": 680,
@@ -16,7 +16,10 @@
     "nav_points_number": 10,
     
     "move_actuation_amount": 0.01,
-    "turn_actuation_amount": 1.0,
+    "turn_actuation_amount": 2.0,
+
+    "move_freq_multiplier": 5,
+    "turn_freq_multiplier": 5,
 
     "default_agent": 0,
     "agent_radius": 0.2,
@@ -37,10 +40,10 @@
     "equirect_depth_sensor": false,
     "equirect_semantic_sensor": false,
 
-    "seed": 2,
+    "seed": 20,
 
     "enable_physics": true,
-    "default_agent_navmesh": true,
+    "default_agent_navmesh": false,
     "navmesh_include_static_objects": false,
     "enable_hbao": true
 }
