--- a/openscene/config/replica/ours_openseg_pretrained.yaml
+++ b/openscene/config/replica/ours_openseg_pretrained.yaml
@@ -12,7 +12,7 @@ TEST:
   prompt_eng: True
   mark_no_feature_to_unknown: True
   feature_type: 'ensemble' # 'distill' | 'fusion' | 'ensemble'
-  save_feature_as_numpy: False
+  save_feature_as_numpy: True
   eval_iou: False
   vis_input: True
   vis_pred: True
